web/css/win.css
/* ... */
/* SCHEDULE */
.CalBody {padding: 5px 10px 0px 10px;}
.CalHeader {background-color: #EBEDF2; padding: 3px; border-top: solid #F35E0C; border-bottom: solid #D5D8DE; border-width: 2px 0px 1px 0px;}
.CalDays {color: #F35E0C;}
.CalInactiveDay {color: #999999;}

/* AUTO-DISCOVERY */
.AutoDiscRowIgnored {background-color: #F5F5F5;}
.AutoDiscRowNew {background-color: #F5FFF9;}
.AutoDiscRowModified {background-color: #FCF9E3;}

.AutoDiscContent {padding: 3px;}
.AutoDiscLabel {padding: 3px; font-weight: bold; text-align: right;}

/* SERVICE, INVENTORY, CONFIG */
.multiSelect {width: 250px;}

/* RESOURCE HUB */
.ResourceHubBlockTitle {font-size: 12px; color: #F35E0C; font-weight: bold; background-color: #CCCCCC; padding: 3px;}

/* ADD/REMOVE WIDGET */
.AddRemoveListCellLeft {padding: 3px; border-bottom: solid #D5D8DE 1px; border-right: solid #D5D8DE 5px;}
.AddRemoveListCellRight {padding: 3px; border-bottom: solid #D5D8DE 1px; border-left: solid #D5D8DE 5px;}
.AddRemoveListCellCheckboxRight {padding: 0px; border-bottom: solid #D5D8DE 1px; text-align: center; border-left: solid #D5D8DE 5px;}
.AddRemoveListHeaderLeft {font-weight: bold; background-color: #DBE3F5; padding: 3px; border-top: solid #ABB1C7 1px; border-bottom: solid #C6CFE5 1px; border-right: solid #D5D8DE 5px;}
.AddRemoveListHeaderCheckboxRight {text-align: center; font-weight: bold; background-color: #DBE3F5; padding: 0px; border-top: solid #ABB1C7 1px; border-bottom: solid #D5D8DE 1px; border-left: solid #D5D8DE 5px;}
.AddRemoveFilterLabelTextLeft {font-size: 11px; background-color: #D5D8DE; font-weight: bold; padding: 5px; border-right: solid #FFFFFF 5px;}
.AddRemoveFilterLabelTextRight {font-size: 11px; background-color: #D5D8DE; font-weight: bold; padding: 5px; border-left: solid #FFFFFF 5px;}

/* MINI CHARTS */
.MiniChartHeader {
    text-align: left;
    font-weight: bold;
    color: #004680;
    padding: 2px;
    font-size: 11px;
    text-align: left;
    vertical-align: middle;
}

.MiniChartTitle {
    background-color: #EBEDF2;
    padding: 3px;
    font-size: 10px;
    color: #004680; }

.MetricResourceType {font-size: 9px; font-weight: normal; padding-left: 2em;}

/* NAVIGATION MAP DIAGRAM */
#diagramDiv {
position: absolute;
z-index: 100;
visibility: hidden;
/* TURN THIS OFF B/C OF DROP-SHADOW
filter: alpha(opacity=85);
-moz-opacity: 1; // should be 0.85 -- see http://bugzilla.mozilla.org/show_bug.cgi?id=201209
*/

}

/* These are the style specifications for the menu layers.
   Set width to get more browsers corporation  */
div.menu {
  position:absolute;
  visibility:hidden;
  width:24em; left:0; top:0;
  font-size:10px;
  background-color: #e6e6e6; color:#000;
  border: 2px solid;
  border-color: #f7faff #99a #99a #f7faff;
  z-index:500;
}

/* Style specifications for menu items and links  */
div.menu ul, .DropDown ul { margin:0; padding:0 }
/* Need to set padding of at least one pixel or ie sets very large margin */
div.menu ul li {
  padding:.3em .4em;
  margin:0;
  list-style-type:none
  }

.DropDown li {
  margin: 2px;
  list-style-type:none
}

/* Set display block and position relative so clicks on list items activate links  */
div.menu a, div.eventsSummary a {
  cursor:default;
  background-color:transparent;
  display:block; position:relative;
  text-decoration:none
  }

div.menu a:link { color:#33b }
div.menu a:visited { color:#339 }
div.menu a:hover { color:#fff; background-color:#338 }

/* These are the styles for the link popups */
a.ListCellPopup1 {
  position: relative;
  z-index:24;
  color: #000;
  text-decoration:underline;
  font-weight:normal;
}

a.ListCellPopup1:hover { z-index:25; }
a.ListCellPopup1 span{ display: none }
a.ListCellPopup1:hover span {
  display:block;
  position:absolute;
  top:0.2em; left:-19em; width:40em;
  padding: 4px;
  border: 2px solid;
  border-color: #f7faff #99a #99a #f7faff;
  background-color:#DBE3F5;
  color:#000;
  text-align: left
}

a.ListCellPopup2{
  position: relative;
  z-index:24;
  color: #000;
  text-decoration:underline;
  font-weight:normal;
}

a.ListCellPopup2:hover { z-index:25; }
a.ListCellPopup2 span { display: none }
a.ListCellPopup2:hover span {
  display:block;
  position:absolute;
  top:0.2em;left:-13em;width:48em;
  padding: 4px;
  border: 2px solid;
  border-color: #f7faff #99a #99a #f7faff;
  background-color:#DBE3F5;
  color:#000;
  text-align: left
}

/* For popups that are also real links, so the color gets set correctly */
a.ListCellPopup3:link {
  position: relative;
  z-index:24;
  color: #003399;
  text-decoration:underline;
  font-weight:bold;
}

a.ListCellPopup3:visited {
  position: relative;
  z-index:24;
  color: #003399;
  text-decoration:underline;
  font-weight:bold;
}

a.ListCellPopup3:hover, span.SpanPopup1:hover {
  position: relative;
  z-index:25;
  color: #003399;
  text-decoration:underline;
  font-weight:bold;
}

a.ListCellPopup3 span { display: none }
a.ListCellPopup3:hover span {
  display:block;
  position:absolute;
  top:0.2em;left:-19em;width:40em;
  padding: 4px;
  border: 2px solid;
  border-color: #f7faff #99a #99a #f7faff;
  background-color:#DBE3F5;
  color:#000;
  text-align: left
}

/* For popups that are also real links, so the color gets set correctly */
a.ListCellPopup4:link, a.ListCellPopup5:link {
  z-index:24;
  color: #000000;
  text-decoration:none;
  font-weight:normal;
}

a.ListCellPopup4:visited, a.ListCellPopup5:visited {
  z-index:24;
  color: #000000;
  text-decoration:underline;
  font-weight:bold;
}

a.ListCellPopup4:hover, a.ListCellPopup5:hover {
  position: relative;
  z-index:25;
}

a.ListCellPopup4 span, a.ListCellPopup5 span, span.SpanPopup1 span {
  display: none
}
a.ListCellPopup4:hover span, a.ListCellPopup5:hover span, span.SpanPopup1:hover span {
  display:block;
  position:absolute;
  top: -.3em;
  left: -.3em;
  width: 60em;
  padding: 2px;
  border: 1px solid;
  border-color: #000000;
  background-color:#E6E6E6;
  color:#000;
  text-align: left
}
/* ... */

